...
                    android:text="-"
                    android:textSize="30sp"
                    android:textColor="#3A3A3A"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/totalBags"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:gravity="center"
                    android:text="1"
                    android:textColor="#3A3A3A"
                    android:textSize="30sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/bag_btn_increment"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textSize="30sp"
                    android:textColor="#3A3A3A"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/bagFees"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="$0"
...
                    android:gravity="center"
                    android:text="0"
                    android:textColor="#3A3A3A"
                    android:textSize="30sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pet_btn_decrement"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="30sp"
                    android:textColor="#3A3A3A"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/totalPetSeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="#3A3A3A"
                    android:textSize="30sp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pet_btn_increment"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+"
                    android:textSize="30sp"
                    android:textColor="#3A3A3A"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/petSeatFees"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:gravity="center"
                    android:text="$0"
...
                        android:text="No"
                        android:checked="true"
                        android:textSize="25sp"
                        android:buttonTint="#EBBE65" /> <!-- Replace with your accent color -->

                    <RadioButton
                        android:id="@+id/radioButtonIncludeWifi"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="Yes ($50)"
                        android:textSize="25sp"
                        android:buttonTint="#EBBE65"  />
...
                    android:id="@+id/radioGroupWheelchairOption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/radioButtonNoWheelchair"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="No"
                        android:checked="true"
                        android:textSize="25sp"
                        android:buttonTint="#EBBE65" /> <!-- Replace with your accent color -->

                    <RadioButton
                        android:id="@+id/radioButtonIncludeWheelchair"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="Yes (Free)"
                        android:textSize="25sp"
                        android:buttonTint="#EBBE65"  />
...
                        android:text="Total"
                        android:textSize="40sp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/totalPriceTV"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="$650"
                        android:textSize="40sp"
                        android:textAlignment="textEnd"
...
                        android:textStyle="bold"/>
                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <Button
                android:id="@+id/btnConfirmExtra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="30dp"
                android:layout_marginBottom="100dp"
                android:text="Confirm extras"
                android:textSize="35sp" />
...
