...
                android:textSize="35sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/etCreditCardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Credit Card Number"
                android:inputType="number"
                android:maxLength="16"
                android:textSize="25sp"
...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/etExpirationDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Expiry Date (MMYY)"
                    android:inputType="number"
                    android:maxLength="4"
                    android:textSize="25sp"
                    android:layout_marginEnd="8dp" />

                <EditText
                    android:id="@+id/etCVV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="CVV"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textSize="25sp"
                    android:layout_marginStart="8dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/etCardholderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Cardholder Name"
                android:inputType="textPersonName"
                android:textSize="25sp"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/etBillingAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Billing Address"
                android:inputType="textPostalAddress"
                android:textSize="25sp"
                android:layout_marginBottom="20dp" />

            <Button
                android:id="@+id/btnPay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Confirm payment"
                android:textSize="25sp" />

        </LinearLayout>
...
