...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textViewDepartureIcao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="YYZ"
                    android:textStyle="bold" />

...
                    android:layout_weight="1"
                    android:background="@color/creamdark"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"/>

                <TextView
                    android:id="@+id/textViewArrivalIcao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="YOW"
                    android:textStyle="bold" />

...
