...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.SeatSelect.Out_boundActivity"
    android:background="#FFFFFF">

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        android:gravity="center"
...
